force-app/main/default/objects/ProjectManagerAppMessage__mdt/ProjectManagerAppMessage__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type referring to the messages displayed in the components.</description>
    <label>Project Manager Message</label>
    <pluralLabel>Project Manager Messages</pluralLabel>
</CustomObject>