force-app/main/default/objects/ProjectManagerAppMessage__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Field referring to the message that will be displayed.</description>
    <inlineHelpText>Field referring to the message that will be displayed.</inlineHelpText>
    <label>Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>