force-app/main/default/objects/ProjectManagerAppMessage__mdt/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Determines how persistent the toast is. Valid values are:
dismissible—(Default) Remains visible until the user clicks the close button or 3 seconds has elapsed, whichever comes first.
pester—Remains visible for 3 seconds.
sticky—Remains visible until the user clicks the close button.</description>
    <inlineHelpText>Determines how persistent the toast is. Valid values are:
dismissible—(Default) Remains visible until the user clicks the close button or 3 seconds has elapsed, whichever comes first.
pester—Remains visible for 3 seconds.
sticky—Remains visible until the user clicks the close button.</inlineHelpText>
    <label>Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dismissible</fullName>
                <default>true</default>
                <label>dismissible</label>
            </value>
            <value>
                <fullName>pester</fullName>
            </value>
            <value>
                <fullName>sticky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>