force-app/main/default/objects/ProjectManagerAppMessage__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The theme and icon displayed in the toast. Valid values are:
success - A green box with a checkmark icon.
warning - A yellow box with a warning icon.
error - A red box with an error icon.
info - A gray box with an info icon.</description>
    <inlineHelpText>The theme and icon displayed in the toast. Valid values are:
success - A green box with a checkmark icon.
warning - A yellow box with a warning icon.
error - A red box with an error icon.
info - A gray box with an info icon.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>success</fullName>
                <default>true</default>
                <label>success</label>
            </value>
            <value>
                <fullName>warning</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>